2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	* Makefile.am: Fix for build break from Johnny.

2007-07-09  Johnny Jacob <jjohnny@novell.com>

	* attachment-remidner.glade : Added mnemonics.
	* attachment-reminder.c : Fixed warnings.
	* org-gnome-attachment-reminder.errors.xml : Added new strings.
	
2007-07-09  Johnny Jacob <jjohnny@novell.com>

	** Added attachment Reminder plugins
	* apps-evolution-attachment-reminder.schemas.in.in:
	* org-gnome-evolution-attachment-reminder.eplug.xml:
	* attachment-reminder.c:                             
	* Makefile.am:
	* attachment-reminder.glade:                         
	* org-gnome-attachment-reminder.errors.xml: